# cpwl-nd-optimization

./: .gitignore  CPWL_nD_MILP.py  CY.xlsx  LICENSE  README.md  example_notebook.ipynb  main.py  pyproject.toml  requirements.txt
data/: compressor.csv  crystal_hydro.csv
scripts/: data_warm_start.py  planes_warm_start.py  run_case_studies.py
src/: CPWL_nD_MILP.py
src/cpwl_optim/: __init__.py
src/cpwl_optim/cpwl/: cpwl_function.py  cpwl_functions.py  data_scaler.py  tight_regions.py
src/cpwl_optim/data_io/: __init__.py  parse_data.py
src/cpwl_optim/optim/: solver.py
