[project]
name = "cpwl-nd-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.31.0",
    "matplotlib>=3.9.0",
    "numpy>=1.26.0,<2.0.0",
    "openpyxl>=3.1.0",
    "ortools>=9.14.0",
    "pandas>=2.2.0",
    "scipy>=1.13.0",
    "spyder-kernels==3.0.*",
]

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
]
